fixed CPU spacing

--- a/rock-paper-scissors/styles/intro-style.css
+++ b/rock-paper-scissors/styles/intro-style.css
@@ -315,6 +315,10 @@ h2 {
   text-align: center;
 }
 
+#cpu-result {
+  margin-top: 20px;
+}
+
 /* results popout */
 
 .results-container {
